--- a/data/scripts/gen_heatmaps.ipynb
+++ b/data/scripts/gen_heatmaps.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "# CONSTS\n",
-    "proj_dir = '/home/suvansh/levine/continualrl/'\n",
+    "proj_dir = 'PROJ_DIR'\n",
     "data_dir = join(proj_dir, 'data')\n",
     "NUM_EPOCH_CONST = 1900"
    ]
